2008-08-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 2.1.4

2008-08-12  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon.types: Remove duplicated hildon_window_get_type
	* src/hildon-window.c: (hildon_window_class_init): Remove duplicated
	documentation comment.

2008-08-12  Claudio Saavedra  <csaavedra@igalia.com>

	reviewed by: <delete if not using a buddy>

	* doc/hildon.types:
	* src/hildon-check-button.c: (hildon_check_button_new):
	* src/hildon-window.c: (hildon_window_class_init):

2008-08-12  Alberto Garcia  <agarcia@igalia.com>

	* doc/Makefile.am: Complete list of private headers.

2008-08-12  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-docs.sgml
	* src/hildon-app-menu.c
	* src/hildon-bread-crumb.c
	* src/hildon-button.c
	* src/hildon-gtk.c
	* src/hildon-program.c
	* src/hildon-stackable-window.c
	* src/hildon-window.c: Lots of documentation updates.

2008-08-12  Alberto Garcia  <agarcia@igalia.com>

	* debian/control: Depend on Gtk 2:2.12.9-0osso3

	* configure.ac: Require Gtk+ 2.12.9 at least

2008-08-12  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_scroll_indicator_fade),
	(hildon_pannable_area_timeout): Added the GDK_THREADS_LEAVE macro
	to protect the return of this timeout callbacks, avoiding deadlocks.

2008-08-12  Christian Dywan  <christian@imendio.com>

	* src/hildon-*.c
	* src/hildon-*.h: Ensure a consistent include order,
	include <gtk/gtk.h> instead of particular files and
	only include the topmost header in the gtk stack. See NB #39857

2008-08-12  Christian Dywan  <christian@imendio.com>

	* src/hildon-picker-dialog.c
	* src/hildon-touch-selector.c: Fix warnings about unused and
	uninitialized variables.

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* examples/Makefile.am
	* examples/hildon-check-button-example.c: Example of the hildon
	check button.

2008-08-11  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-window.h