@@ -1,3 +1,12 @@
+2008-08-12  Alberto Garcia  <agarcia@igalia.com>
+
+	* examples/hildon-pannable-area-touch-list-example.c
+	(create_tree_view)
+	* examples/hildon-pannable-area-touch-grid-example.c
+	(create_icon_view): Use gtk_{tree,icon}_view_new() and
+	hildon_gtk_{tree,icon}_view_new() instead of g_object_new().
+	Fix memory leak when setting the tree model.
+
 2008-08-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 2.1.4
